fathom/fathom-deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fathom
  labels:
    app: fathom
    app.kubernetes.io/name: fathom
spec:
  selector:
    app.kubernetes.io/name: fathom
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fathom
spec:
  selector:
      matchLabels:
        app.kubernetes.io/name: fathom
  template:
    metadata:
      labels:
        app: fathom
        app.kubernetes.io/name: fathom
    spec:
      containers:
      - name: fathom
        image: kasuboski/fathom
        args:
        - "./fathom"
        - "--config"
        - "/etc/fathom/fathom.env"
        - "server"
        ports:
          - name: http
            containerPort: 8080
        volumeMounts:
          - name: data
            mountPath: /var/data
          - name: config
            mountPath: /etc/fathom
        resources:
          limits:
            cpu: 100m
            memory: 64Mi
      volumes:
        - name: data
          persistentVolumeClaim:
              claimName: fathom
        - name: config
          secret:
            secretName: fathom-config
