fathom/fathom-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fathom
  labels:
    app.kubernetes.io/name: fathom
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - fathom.joshcorp.co
    secretName: fathom-joshcorp-tls
  rules:
  - host: fathom.joshcorp.co
    http:
      paths:
      - backend:
          serviceName: fathom
          servicePort: http
        path: /
